# vs-data-api

./: .env.example  .flake8  .git-blame-ignore-revs  .gitignore  .python-version  LICENSE.txt  README.md  config.py  main.py  notes.txt  pyproject.toml  pytest.ini  requirements.txt  wc_products.json
fm_scripts/: GLOBALS.txt  README.md  VSDATA  update_stock_wc.txt
src/vs_data/: __init__.py  __main__.py  stock.py  woocommerce.py
src/vs_data/cli/: table.py
src/vs_data/fm/: db.py  link_tables.py  vs_tables.py
src/vs_data/stock/: __init__.py  batch_upload.py  misc.py  requirements.txt
src/vs_data/utils/: cli.py
src/vs_data/utils/fm/: constants.py  db.py  link_tables.py  vs_tables.py
src/vs_data/utils/fm/queries/: batches_awaiting_upload.sql
src/vs_data/utils/wc/: api.py
src/vs_data/wc/: api.py
src/vs_data_api/: __about__.py  __main__.py  config.py  main.py  pyproject.toml  serve.py
src/vs_data_api/cli/: __init__.py  introspection.py
src/vs_data_api/vs_data/: __init__.py  __main__.py  sqlmodtest.py
src/vs_data_api/vs_data/cli/: table.py
src/vs_data_api/vs_data/factories/: __init__.py  acquisition.py  batch.py  stock_correction.py  utils.py
src/vs_data_api/vs_data/fm/: __init__.py  constants.py  db.py  link_tables.py  vs_tables.py
src/vs_data_api/vs_data/fm/queries/: example.sql
src/vs_data_api/vs_data/orders/: __init__.py  status.py  wholesale.py
src/vs_data_api/vs_data/products/: __init__.py  price.py
src/vs_data_api/vs_data/stock/: batch_upload.py  cli_commands.py  corrections.py  misc.py  stock_analytics.py
src/vs_data_api/vs_data/wc/: api.py
startup/: run-test.ps1  run.ps1  run.sh  task_scheduler_startup_api.xml  update.ps1  vsdata_startup.cmd
tests/: __init__.py  conftest.py  fmdb_mock.sqlite  test_copy_fmdb_schema.py  test_fm_db_constants.py  test_fmdb_ddr_import.py  test_fmdb_mock.py  test_main.py  test_odbc.py  test_stock.py  test_wcapi.py
tests/fixtures/: batch_awaiting_upload_wc_products.json  batch_awaiting_upload_wc_products.toml  batch_wcapi_products.json  test_update_batch_stock.toml
tests/fixtures/test_wcapi_stock/: batch_awaiting_upload_wc_products.toml  batch_post_product_stock.toml
tests/integration/fm/: test_corrections.py  test_endpoints.py  test_endpoints_200.py  test_fastapi_svcs.py  test_fm.py  test_stock.py
tests/integration/fm_mock/: conftest.py  test_odbc.py
tests/unit/: test_cli.py  test_fmdb_constants.py
vs_data/: __init__.py  __main__.py  sqlmodtest.py
vs_data/fm/: __init__.py  constants.py  db.py  link_tables.py  vs_tables.py
vs_data/orders/: __init__.py  status.py
vs_data/products/: __init__.py  price.py  skus.py
vs_data/stock/: __init__.py  batch_upload.py  cli_commands.py  corrections.py  misc.py  stock_analytics.py
vs_data/wc/: api.py
